-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
While copying files into 2 filesystems /scratch and /home, there were 2 discrete crashes occured. The directory that the client was populating when the crash occurred was not accessible from other clients after the client had crashed.
(lcommon_cl.c:147:cl_file_inode_init()) ASSERTION( (((inode->i_mode) & 00170000) == 0100000) ) failed: