lustre/llite/statahead.c
@@ -658,14 +658,14 @@ static void sa_instantiate(struct ll_statahead_info *sai,
 		GOTO(out, rc = -EFAULT);
 
 	child = entry->se_inode;
-	if (child) {
-		/* revalidate; unlinked and re-created with the same name */
-		if (unlikely(!lu_fid_eq(&minfo->mi_data.op_fid2,
-					&body->mbo_fid1))) {
+	/* revalidate; unlinked and re-created with the same name */
+	if (unlikely(!lu_fid_eq(&minfo->mi_data.op_fid2, &body->mbo_fid1))) {
+		if (child) {
 			entry->se_inode = NULL;
 			iput(child);
-			child = NULL;
 		}
+		/* The mdt_body is invalid. Skip this entry */
+		GOTO(out, rc = -EAGAIN);
 	}
 
 	it->it_lock_handle = entry->se_handle;
